[package]
name = "cuda-metrics-v2"
version = "0.1.0"
edition = "2021"
description = "Histograms with percentiles and derivative gauges"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-metrics-v2"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

